@@ -422,6 +422,8 @@ U:irc2.server.net
 #
 Q:dcc-*:dcc bots not allowed on this server
 Q:lamestbot:You have to be kidding me
+Q:crush:In memory of Janet Pippin
+Q:cwush:In memory of Janet Pippin
 #
 # X lines.
 # Used to match gecos fields and prohibit users or warn about users
